--- a/第1章 科研论文绘图及配色基础.ipynb
+++ b/第1章 科研论文绘图及配色基础.ipynb
@@ -328,6 +328,16 @@
     "\n",
     "plot_template(means, std, linewidth, labels, colors, title_='Qualitative colormap', saveflag=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "参考资料：<br>\n",
+    "[1] [Datawhale 科研论文配图绘制指南--基于Python》](https://github.com/datawhalechina/paper-chart-tutorial)<br>\n",
+    "[2] [matplotlib 官方文档](https://matplotlib.org/stable/tutorials/index) <br>\n",
+    "[3] [Seaborn 官方文档](https://seaborn.pydata.org/) <br>"
+   ]
   }
  ],
  "metadata": {
