--- a/第3章 单变量绘图.ipynb
+++ b/第3章 单变量绘图.ipynb
@@ -678,7 +678,10 @@
     "            ax = sns.histplot(data=data, x=x, kde=kde)\n",
     "\n",
     "        ax.set_xlabel('Values') # 画完图后不能再有参数出现\n",
-    "        ax.set_ylabel('Frequency')  \n",
+    "        if kind == 'hist':\n",
+    "            ax.set_ylabel('Frequency')  \n",
+    "        else:\n",
+    "            ax.set_ylabel('Density')\n",
     "\n",
     "        if saveflag:\n",
     "            if hue:\n",
