--- a/第3章 单变量绘图.md
+++ b/第3章 单变量绘图.md
@@ -1,14 +1,16 @@
 # <a id='toc1_'></a>[第3章 变量分布图](#toc0_)
 
 
-**本文目录**<a id='toc0_'></a>    
+**Table of contents**<a id='toc0_'></a>    
 - [第3章 变量分布图](#toc1_)    
   - [3.1 直方图](#toc1_1_)    
   - [3.2 密度图](#toc1_2_)    
-  - [3.3 常用函数封装](#toc1_3_)    
-    - [3.3.1 单变量分布图](#toc1_3_1_)    
-    - [3.3.2 多变量分布图](#toc1_3_2_)    
-  - [参考资料：<br>](#toc1_4_)    
+  - [3.3 箱线图](#toc1_3_)    
+  - [3.4 常用分布函数封装](#toc1_4_)    
+  - [3.5 多变量分布图](#toc1_5_)    
+    - [3.5.1 两个变量](#toc1_5_1_)    
+    - [3.5.2 多个变量](#toc1_5_2_)    
+  - [参考资料：<br>](#toc1_6_)    
 
 <!-- vscode-jupyter-toc-config
 	numbering=false
@@ -384,12 +386,41 @@ plt.show()
 
 注意，Seaborn的`kdeplot`函数默认采用的是高斯核函数，如果想要用其他核函数的话可以参考`KDEpy`库。（一般高斯核也够用了）
 
-## <a id='toc1_3_'></a>[3.3 常用函数封装](#toc0_)
+## <a id='toc1_3_'></a>[3.3 箱线图](#toc0_)
+箱线图可以很好地看出分布情况，同时也可以看出中位数、上四分位数和下四分位数。
+
+![boxplot_demonstration.png](https://img1.imgtp.com/2023/09/01/TiLKzFCz.png)<br>
+![boxplot2.png](https://img1.imgtp.com/2023/09/01/jpXsB8bc.png)
+
+图源：[如何深刻理解箱线图（boxplot）](https://zhuanlan.zhihu.com/p/347067055).
+
+如图所示，箱线图的这个箱子的下边缘和上边缘分别是第1（25%）和第3（75%）分位数，箱子中间的线为该数据的中位数，箱子上下边缘之差称为IQR（Interquartile range）。
+
+箱子往两边延伸出的两根实线末端分别是数据的最大值和最小值，超过实线末端的称为异常值或离群值。
+
+
+```python
+with plt.style.context(['science']):
+    fig, ax  = plt.subplots(figsize=(10,6), dpi=100, facecolor="w")
+    ax = sns.boxplot(data=iris, x='sepal_length', y='species', hue='species')
+
+    ax.set_xlabel('Sepal length')
+
+    plt.savefig('./images/Seaborn_boxplot.png', dpi=300, bbox_inches='tight')
+    plt.show()
+```
+
+
+    
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_26_0.png)
+    
+
+
+## <a id='toc1_4_'></a>[3.4 常用分布函数封装](#toc0_)
 需要用到分布函数的情况有：数据探索阶段、验证阶段（验证测试集分布与训练集分布是否差异过大）等。那么，我们可以封装一些常用的分布函数，把画图、调参、存储这些琐碎但重要的细节都封装好，以后调用只需输入几个参数，减少花在调整细节上的时间。
 
 PS：科研论文绘图更多时候需要的是“定制化”，很难一个模板走天下，这个时候建议大家直接看matplotlib或者Seaborn等的官方文档，有更加详细的参数解释和例子，这里就不多介绍了。
 
-### <a id='toc1_3_1_'></a>[3.3.1 单变量分布图](#toc0_)
 
 
 ```python
@@ -414,7 +445,7 @@ def univariate_histplot(data:DataFrame, x:str, hue=None, figsize=(10,6), style=[
     figsize: 图片尺寸，默认为(10, 6)。
     style: list, 画图的风格，默认为['science']，可以改为['science', 'ieee']
     kde: bool, 是否添加核密度估计曲线，默认为True.
-    kind: str, 图像类型，hist为直方图，kde为密度图。
+    kind: str, 图像类型，hist为直方图，kde为密度图，box为箱线图。
     plot_dpi: int, 画图时的dpi。
     saveflag: bool, 是否保存图片，默认为False。
     save_dir: str, 保存路径。
@@ -433,26 +464,39 @@ def univariate_histplot(data:DataFrame, x:str, hue=None, figsize=(10,6), style=[
         raise ValueError("Input 'hue' must be a column name in data")
     if not save_dir.endswith('/'):
         save_dir = save_dir + '/'
-    if kind not in ['hist', 'kde']:
-        raise ValueError("Input 'kind' must be 'hist' or 'kde'")
+    if kind not in ['hist', 'kde', 'box']:
+        raise ValueError("Input 'kind' must be 'hist' or 'kde' or 'box")
     
     with plt.style.context(style):
         fig, ax = plt.subplots(figsize=figsize, dpi=plot_dpi, facecolor="w")
-        if hue and kind == 'hist':
-            ax = sns.histplot(data=data, x=x, hue=hue, multiple='dodge', shrink=.8)
-        elif hue and kind == 'kde':
-            ax = sns.kdeplot(data=data, x=x, hue=hue, fill=True, alpha=.5)
+        if hue:
+            if kind == 'hist':
+                ax = sns.histplot(data=data, x=x, hue=hue, multiple='dodge', shrink=.8)
+            if kind == 'kde':
+                ax = sns.kdeplot(data=data, x=x, hue=hue, fill=True, alpha=.5)
+            if kind == 'box':
+                ax = sns.boxplot(data=data, x=x, y=hue)
         else:
-            ax = sns.histplot(data=data, x=x, kde=kde)
+            if kind == 'hist':
+                ax = sns.histplot(data=data, x=x, kde=kde)
+            if kind == 'kde':
+                ax = sns.kdeplot(data=data, x=x, fill=True, alpha=.5)
+            if kind == 'box':
+                ax = sns.boxplot(data=data, x=x)
 
         ax.set_xlabel('Values') # 画完图后不能再有参数出现
-        ax.set_ylabel('Frequency')  
+        if kind == 'hist':
+            ax.set_ylabel('Frequency')  
+        elif kind == 'box':
+            pass
+        else:
+            ax.set_ylabel('Density')
 
         if saveflag:
             if hue:
-                save_path = save_dir + kind + x + '_' + hue + '_' + style[-1] + '.' + save_type
+                save_path = save_dir + kind + '_' + x + '_' + hue + '_' + style[-1] + '.' + save_type
             else:
-                save_path = save_dir + kind + x + '_' + style[-1] + '.' + save_type
+                save_path = save_dir + kind + '_' + x + '_' + style[-1] + '.' + save_type
             plt.savefig(save_path, dpi=save_dpi, bbox_inches='tight')
             print(f'Plot has been saved to {save_path} .')
 
@@ -466,26 +510,40 @@ def univariate_histplot(data:DataFrame, x:str, hue=None, figsize=(10,6), style=[
 univariate_histplot(iris, x='sepal_length', saveflag=True, save_dir='./images/')
 ```
 
-    Plot has been saved to ./images/histsepal_length_science.png .
+    Plot has been saved to ./images/hist_sepal_length_science.png .
     
 
 
     
-![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_27_1.png)
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_30_1.png)
     
 
 
 
 ```python
-univariate_histplot(iris, x='sepal_length', hue='species', saveflag=True, save_dir='./images')
+univariate_histplot(iris, x='sepal_length', hue='species', saveflag=True, save_dir='./images/')
 ```
 
-    Plot has been saved to ./images/histsepal_length_species_science.png .
+    Plot has been saved to ./images/hist_sepal_length_species_science.png .
     
 
 
     
-![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_28_1.png)
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_31_1.png)
+    
+
+
+
+```python
+univariate_histplot(iris, x='sepal_length', kind='kde', saveflag=True, save_dir='./images')
+```
+
+    Plot has been saved to ./images/kde_sepal_length_science.png .
+    
+
+
+    
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_32_1.png)
     
 
 
@@ -494,23 +552,50 @@ univariate_histplot(iris, x='sepal_length', hue='species', saveflag=True, save_d
 univariate_histplot(iris, x='sepal_length', hue='species', kind='kde', saveflag=True, save_dir='./images')
 ```
 
-    Plot has been saved to ./images/kdesepal_length_species_science.png .
+    Plot has been saved to ./images/kde_sepal_length_species_science.png .
     
 
 
     
-![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_29_1.png)
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_33_1.png)
     
 
 
-OK，3种模式都很成功。
 
-### <a id='toc1_3_2_'></a>[3.3.2 多变量分布图](#toc0_)
-接下来我们来画多个变量的分布图，先从2个到多个变量。这种图的作用一般在于看多个变量之间的相关性如何（启示我们要选择数值型变量，文本型变量需要进行转换数据类型）。
+```python
+univariate_histplot(iris, x='sepal_length', kind='box', saveflag=True, save_dir='./images')
+```
 
-- 2个变量
+    Plot has been saved to ./images/box_sepal_length_science.png .
+    
 
-    对于两个变量的之间的分布图，可以用seaborn的`jointplot`函数，它默认画的是散点图，但是可以指定kind参数。
+
+    
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_34_1.png)
+    
+
+
+
+```python
+univariate_histplot(iris, x='sepal_length', kind='box', hue='species', saveflag=True, save_dir='./images')
+```
+
+    Plot has been saved to ./images/box_sepal_length_species_science.png .
+    
+
+
+    
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_35_1.png)
+    
+
+
+OK，各种模式都很成功。
+
+## <a id='toc1_5_'></a>[3.5 多变量分布图](#toc0_)
+接下来我们来画多个变量的分布图，先从2个到多个变量。这种图的作用一般在于查看多个变量之间的分布情况，以及多个变量之间的相关性如何。
+
+### <a id='toc1_5_1_'></a>[3.5.1 两个变量](#toc0_)
+对于两个变量的之间的分布图，可以用seaborn的`jointplot`函数，它默认画的是散点图，但是可以指定kind参数。
 
 
 ```python
@@ -536,7 +621,7 @@ plt.show()
 
 
     
-![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_31_1.png)
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_37_1.png)
     
 
 
@@ -561,7 +646,7 @@ plt.show()
 
 
     
-![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_33_1.png)
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_39_1.png)
     
 
 
@@ -569,10 +654,12 @@ plt.show()
 
 更多`jointplot`函数的用法参见[Seaborn官方文档：jointplot](https://seaborn.pydata.org/generated/seaborn.jointplot.html?highlight=jointplot#seaborn.jointplot)。
 
-- 多个变量
-    当变量个数较多时，推荐使用Seaborn的`pairplot`和`heatmap`函数。
+### <a id='toc1_5_2_'></a>[3.5.2 多个变量](#toc0_)
+当变量个数较多时，可以用matplotlib画多个子图，每个子图两两变量进行画图，但可想而知工作量较大，不太推荐。
 
-    先来看看pairplot：
+这里推荐使用Seaborn的`pairplot`和`heatmap`函数。
+
+先来看看pairplot：
 
 
 ```python
@@ -588,13 +675,13 @@ plt.show()
 
 
     
-![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_35_1.png)
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_41_1.png)
     
 
 
 emmmm, `pairplot`这个函数返回的是`PairGrid`对象，不是`matplotlib.axes.Axes`对象，还是没法用`SciencePlots`。不过这个函数已经封装地很好了，一行代码搞定，就不再封装了~
 
-再来看看热力图函数`heatmap`：
+再来看看热力图函数`heatmap`。热力图函数主要用来可视化不同变量之间的相关性强弱。
 
 
 ```python
@@ -679,7 +766,7 @@ plt.show()
 
 
     
-![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_38_0.png)
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_44_0.png)
     
 
 
@@ -695,7 +782,7 @@ plt.show()
 
 
     
-![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_40_0.png)
+![png](%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_files/%E7%AC%AC3%E7%AB%A0%20%E5%8D%95%E5%8F%98%E9%87%8F%E7%BB%98%E5%9B%BE_46_0.png)
     
 
 
@@ -703,8 +790,9 @@ plt.show()
 
 这个热力图能用`SciencePlots`，但是不太推荐，刻度线太细了，看着反而有点奇怪，不如直接设置Seaborn的风格参数。
 
-## <a id='toc1_4_'></a>[参考资料：<br>](#toc0_)
+## <a id='toc1_6_'></a>[参考资料：<br>](#toc0_)
 [1] [《Datawhale 科研论文配图绘制指南--基于Python》](https://github.com/datawhalechina/paper-chart-tutorial)<br>
 [2] [matplotlib 官方文档](https://matplotlib.org/stable/tutorials/index) <br>
 [3] [Seaborn 官方文档](https://seaborn.pydata.org/) <br>
-[4] [Pandas 官方文档](https://pandas.pydata.org/docs/user_guide/reshaping.html#pivot)
+[4] [Pandas 官方文档](https://pandas.pydata.org/docs/user_guide/reshaping.html#pivot) <br>
+[5] [SciencePlots官方仓库及文档](https://github.com/garrettj403/SciencePlots)
